removed the extra js

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
     <!--Board-->
     <div class= "crystalImage">
         <div class="row">
-            <div class ="col-md-12">
+            <div class ="col-md panel text-center">
             <img src="assets/images/blue.jpg" class=crystalImage  id="one" alt="Sapphire" ></div>
-            <div class ="col">
+            <div class ="col-md panel text-center">
             <img src="assets/images/emerald.jpeg" class=crystalImage id="two" alt="Emerald"></div>
             <div class ="col-md">
             <img src="assets/images/ruby.jpg" class=crystalImage id= "three" alt="Ruby"  ></div>
-            <div class ="col-md">
+            <div class ="col-md panel text-center">
             <img src="assets/images/gold.jpg" class=crystalImage  id= "four" alt="Gold" ></div>
          </div>
         </div>
